--- a/index.html
+++ b/index.html
@@ -11,23 +11,26 @@
 <body>
   <p id="screen">Screen here!</p>
   <div class='container'>
-    <button id="7">7</button>
-    <button id="8">8</button>
-    <button id="9">9</button>
-    <button id="plus">+</button>
-    <button id="4">4</button>
-    <button id="5">5</button>
-    <button id="6">6</button>
-    <button id="minus">-</button>
-    <button id="1">1</button>
-    <button id="2">2</button>
-    <button id="3">3</button>
-    <button id="multiply">*</button>
-    <button id="decimal">.</button>
-    <button id="0">0</button>
-    <button id="equals">=</button>
-    <button id="divide">/</button>
+    <button class='digit' ,id="7">7</button>
+    <button class='digit' ,id="8">8</button>
+    <button class='digit' ,id="9">9</button>
+    <button class='digit' ,id="plus">+</button>
+    <button class='digit' ,id="4">4</button>
+    <button class='digit' ,id="5">5</button>
+    <button class='digit' ,id="6">6</button>
+    <button class='digit' ,id="minus">-</button>
+    <button class='digit' ,id="1">1</button>
+    <button class='digit' ,id="2">2</button>
+    <button class='digit' ,id="3">3</button>
+    <button class='digit' ,id="multiply">*</button>
+    <button class='digit' ,id="decimal">.</button>
+    <button class='digit' ,id="0">0</button>
+    <button class='digit' ,id="equals">=</button>
+    <button class='digit' ,id="divide">/</button>
+    <button class='digit' ,id="clear">Clear</button>
   </div>
 </body>
+
+<script src='calculator.js'></script>
 
 </html>
