fix: resolve decimal bug & expression w/o values

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <p id="screen">Screen here!</p>
+  <p id="screen">Enter some numbers!</p>
   <div class='container'>
     <button class='digit' ,id="7">7</button>
     <button class='digit' ,id="8">8</button>
